--- a/lang/en.json
+++ b/lang/en.json
@@ -80,7 +80,7 @@
     "رقم الهيئة": "Organization number",
     "حالة (الأب , الأم)": "Status (Father, Mother)",
     "الهاتف": "phone",
-    "مراسلة الجمعية": "Contact the association",
+    "مراسلة الجمعية": "Contact association",
     "لا يوجد أسر أولى بالرعاية": "There are no families in need of care",
     "استمارة كفالة الأسرة": "Family sponsorship form",
     "اسم الهيئة": "Organization Name",
@@ -195,7 +195,7 @@
     "البحث عن تقرير": "Search for report",
     "إضافة تقرير": "Add report",
     "اخر تحديث": "Last update",
-    "تحميل التقرير": "Download the report",
+    "تحميل التقرير": "Download report",
     "تعديل": "Edit",
     "لا يوجد تقارير": "There are no reports",
     "جمعية السيدة مريم": "Mrs. Mariam's Association",
@@ -238,6 +238,370 @@
     "ارفق شهادة ميلاد اليتيم": "Attach the orphan's birth certificate",
     "صورة الشهادة الدراسية": "Academic certificate image",
     "ارفق صورة الشهادة الدراسية": "Attach the academic certificate image",
+    "تعديل التقرير": "Edit Report",
+    "تقارير الشارقة الخيرية": "Sharjah Charity Reports",
+    "عن عدد الأشهر": "Number Of Months",
+    "جمعية الشارقة الخيرية": "Sharjah Charity Association",
+    "كود اليتيم": "Orphan Code",
+    "أدخل كود اليتيم": "Enter the orphan code",
+    "أدخل عدد الأشهر": "Enter the month number",
+    "كود الكافل": "Sponsor Code",
+    "أدخل كود الكافل": "Enter the sponsor Code",
+    "صندوق البريد": "Post Office Box",
+    "أدخل صندوق البريد": "Enter the post office box",
+    "اسم الكامل اليتيم": "Full name of the orphan",
+    "أدخل اسم الكامل اليتيم": "Enter the Full name of the orphan",
+    "نوع اليتيم": "Orphan Gender",
+    "أدخل نوع اليتيم": "Enter the orphan gender",
+    "مكان الميلاد": "Place of birth",
+    "أدخل مكان الميلاد": "Enter the place of birth",
+    "أدخل الجنسية": "Enter the nationality",
+    "السن": "Age",
+    "أدخل السن": "Enter the age",
+    "سبب استمرار الكفالة بعد البلوغ": "Reason for continuing sponsorship after reaching adulthood",
+    "تاريخ وفاة الأب": "Date of father death",
+    "تاريخ وفاة الأم": "Date of mother death",
+    "عدد افراد الاسرة": "Number of family members",
+    "أدخل عدد افراد الاسرة": "Enter the number of family members",
+    "اسم ولي الأمر": "Guardian Name",
+    "أدخل اسم  ولي الأمر": "Enter the guardian name",
+    "أدخل الهاتف": "Enter the phone number",
+    "هاتف واتس اب": "WhatsApp phone number",
+    "أدخل هاتف واتس اب": "Enter the whatsApp phone number",
+    "هل يعيش مع امه؟": "Does he live with his mother?",
+    "أدخل هل يعيش مع امه؟": "Enter if he lives with his mother?",
+    "السبب": "Reason",
+    "أدخل السبب": "Enter the reason",
+    "الأحوال التي مر بها اليتيم مؤخرا و عائلته": "The circumstances the orphan and their family have recently gone through",
+    "الحالة الصحية لليتيم": "The health condition of the orphan",
+    "أدخل الحالة الصحية لليتيم": "Enter the health condition of the orphan",
+    "مرض مزمن": "Chronic illness",
+    "أدخل مرض مزمن": "Enter chronic disease",
+    "نوع المرض و أسبابه": "Type of disease and its causes",
+    "أدخل  نوع المرض و أسبابه": "Enter the type of disease and its causes",
+    "المرحلة الدراسية": "Educational stage",
+    "أدخل المرحلة الدراسية": "Enter the educational stage",
+    "سبب عدم الدراسة": "Reason for not studying",
+    "أدخل سبب عدم الدراسة": "Enter the reason for not studying",
+    "التوجه البديل": "Alternative direction",
+    "أدخل التوجه البديل": "Enter the alternative direction",
+    "الاجراءات التي اتخذها المشرف": "The actions taken by the supervisor",
+    "أدخل الاجراءات التي اتخذها المشرف": "Enter the actions taken by the supervisor",
+    "يواظب على الصلاة": "He is committed to praying",
+    "أجب بنعم أو لا": "Answer Yes or No",
+    "صوم رمضان": "Fasting in Ramadan",
+    "كم يحفظ من القران الكريم": "How much of the Quran has he memorized?",
+    "أدخل كم يحفظ من القران الكريم": "Enter how much of the Quran he has memorized",
+    "مشرف الأيتام": "Orphan Supervisor",
+    "أدخل مشرف الأيتام": "Please enter the name of the orphan supervisor",
+    "ارفق صورة ختم الجمعية المشرفة": "Please upload the image of the supervising association's stamp",
+    "ختم الجمعية المشرفة": "The seal of the supervising association",
+    "صوة اليتيم مع لوحة الدفعة": "The orphan's photo with the payment board",
+    "ارفق صوة اليتيم مع لوحة الدفعة": "Please attach the orphan's photo with the payment board",
+    "رسالة شكر من اليتيم للكافل": "Message of thanks from the orphan to the sponsor",
+    "ارفق صورة رسالة شكر من اليتيم للكافل": "Attach a photo of the thank-you message from the orphan to the sponsor",
+    "اخر شهادة حصل عليها اليتيم و اخر درجات": "Last certificate received by the orphan and the latest grades",
+    "ارفق صورة اخر شهادة": "Attach a picture of the last certificate",
+    "التقرير الطبي": "Medical report",
+    "ارفق صورة التقرير الطبي": "Attach the medical report image",
+    "ايصال تحويل مبلغ الكفالة الى حساب اليتيم": "Receipt of the sponsorship amount transfer to the orphan's account",
+    "أرفق صورة الايصال": "Attach a picture of the receipt",
+    "نوع السكن": "Type of housing",
+    "أدخل نوع السكن": "Enter the type of housing",
+    "تقارير دار البر": "Reports of Dar Al Ber",
+    "عمر اليتيم": "Age of the orphan",
+    "أدخل عمر اليتيم": "Enter the age of the orphan",
+    "رقم ملف الكافل": "Sponsor file number",
+    "أدخل رقم ملف الكافل": "Enter the sponsor file number",
+    "رقم ملف اليتيم": "Orphan file number",
+    "أدخل رقم ملف اليتيم": "Enter the orphan file number",
+    "جنسية اليتيم": "Orphan nationality",
+    "أدخل جنسية اليتيم": "Enter the orphan nationality",
+    "التزامات اليتيم بتعاليم الاسلام": "Obligations of the orphan according to Islamic teachings",
+    "أدخل التزامات اليتيم بتعاليم الاسلام": "Enter the obligations of the orphan according to Islamic teachings",
+    "حفظ اليتيم من القران الكريم": "Memorization of the orphan from the Quran",
+    "أدخل حفظ اليتيم من القران الكريم": "Enter the memorization of the orphan from the Quran",
+    "المسؤول المباشر عن اليتيم": "Direct supervisor of the orphan",
+    "أدخل المسؤول المباشر عن اليتيم": "Enter the direct supervisor of the orphan",
+    "صلته باليتيم": "His relationship with the orphan",
+    "أدخل صلته باليتيم": "Enter his relationship with the orphan",
+    "أبرز التغيرات التي طرأت على اليتيم هذه السنة": "Enter the main changes that occurred to the orphan this year",
+    "تعليق الهيئة على أثر الكفالة": "Comment of the organization on the impact of the sponsorship",
+    "أدخل تعليق الهيئة على أثر الكفالة": "Enter the comment of the organization on the impact of the sponsorship",
+    "رسالة اليتيم للكافل": "Message from the orphan to the sponsor",
+    "تقارير دبي الخيرية": "Dubai Charity Reports",
+    "جمعية دبي الخيرية": "Dubai Charity Association",
+    "تاريخ التقرير": "Report Date",
+    "ملاحظات على الحالة الصحية": "Notes on Health Condition",
+    "أدخل ملاحظات على الحالة الصحية": "Enter the notes on health condition",
+    "ملاحظات إدارة الأيتام": "Notes from the Orphan Management",
+    "أدخل  ملاحظات إدارة الأيتام": "Enter Notes from the Orphan Management",
+    "ختم اللجنة المشرفة الالكتروني": "Electronic Seal of the Supervisory Committee",
+    "ارفق ختم اللجنة المشرفة الالكتروني": "Attach the electronic seal of the supervising committee",
+    "اعتماد جمعية دبي الخيرية": "Approval of Dubai Charity Association",
+    "ارفق اعتماد جمعية دبي الخيرية": "Attach the Dubai Charity Association's accreditation",
+    "صورة اليتيم": "Orphan photo",
+    "ارفق  صورة اليتيم": "Attach a picture of the orphan",
+    "صورة جماعية": "Group photo",
+    "ارفق صورة جماعية": "Attach a group photo",
+    "ارفق رسالة اليتيم للكافل": "Attach the orphan's message to the sponsor",
+    "شهادة اليتيم الدارسية": "Orphan educational certificate",
+    "ارفق شهادة اليتيم الدارسية": "Attach the orphan's educational certificate",
+    "داعم": "supporter",
+    "البحث عن داعم": "Search for a supporter",
+    "إضافة داعم": "Add Supporter",
+    "ارسال رسالة": "Send a message",
+    "لا يوجد داعمين": "There are no supporters",
+    "إضافة داعمين": "Add Supporters",
+    "إضافة بريد الكتروني": "Add an email address",
+    "اسم المسؤول": "responsible person name",
+    "أدخل اسم المسؤول": "Enter the name of the responsible person",
+    "اسم الجمعية": "Association Name",
+    "أدخل اسم الجمعية": "Enter the association name",
+    "اسم القسم": "Department Name",
+    "أدخل اسم القسم": "Enter the department name",
+    "الكشوفات الواردة": "Incoming Records",
+    "عرض الكل": "View all",
+    "رقم أمر الصرف": "Payment Order Number",
+    "صورة الاستلام": "Receipt Image",
+    "صورة استلام المبلغ": "Receipt of the amount",
+    "لا يوجد كشوفات واردة": "There are no incoming statements",
+    "قائمة المكفولين": "List of sponsored",
+    "الكود الداخلي": "Internal code",
+    "الكود الخارجي": "External code",
+    "اجمالي المدفوع": "Total paid",
+    "لا يوجد مكفولين": "There are no sponsored individuals",
+    "البحث عن يتيم": "Search for an orphan",
+    "البحث عن مكفولين": "Search for sponsored orphans",
+    "البحث عن متطوع": "Search for volunteer",
+    "إضافة متطوع": "Add Volunteer",
+    "لا يوجد متطوعين": "There are no volunteers",
+    "المناطق التي ستقوم بتغطيتها": "The areas that will be covered",
+    "اختر": "Choose",
+    "القاهرة": "Cairo",
+    "الجيزة": "Giza",
+    "الدقهلية": "Dakahlia",
+    "الاسكندرية": "Alexandria",
+    "القليوبية": "Qalyubia",
+    "دمياط": "Damietta",
+    "الفيوم": "Fayoum",
+    "الغربية": "Gharbia",
+    "المنوفية": "Monufia",
+    "الشرقية": "Sharqia",
+    "أسيوط": "Asyut",
+    "أسوان": "Aswan",
+    "سوهاج": "Sohag",
+    "المنيا": "Minya",
+    "كفر الشيخ": "Kafr El Sheikh",
+    "بورسعيد": "Port Said",
+    "الإسماعيلية": "Ismailia",
+    "الصور والملفات المطلوبة": "The required images and files",
+    "صورة تحقق شخصية": "Identity verification photo",
+    "ارفق صورة تحقق شخصية": "Attach identity verification photo",
+    "اللغة": "Languages",
+    "نوع الحالة": "Case Type",
+    "الأيتام المقدمين": "Submitted Orphans",
+    "البحث عن اليتيم": "Search for Orphan",
+    "إضافة يتيم": "Add Orphan",
+    "لا يوجد أيتام مسجلين": "There are no orphans registered",
+    "استمارة التسجيل": "Registration Form",
+    "كود اليتيم الداخلي": "Internal Orphan Code",
+    "أرفق الاستمارة": "Attach the form",
+    "استمارة تقديم الأيتام": "Orphan Application Form",
+    "الرقم القومي لليتيم": "Orphan National ID",
+    "أدخل الرقم القومي لليتيم": "Enter the orphan national ID",
+    "جهة الميلاد": "Place of Birth",
+    "ادخل جهة الميلاد": "Enter the place of birth",
+    "النوع": "Gender",
+    "ذكر": "Male",
+    "أنثى": "Female",
+    "ادخل السن": "Enter the age",
+    "يتيم الأبوين": "Both Parents Orphaned",
+    "مريض مزمن": "Chronic Patient",
+    "حالات خاصة": "Special Cases",
+    "قريب السن": "Close in Age",
+    "لا": "NO",
+    "نعم": "Yes",
+    "الرقم القومي للأم": "Mother National ID",
+    "أدخل الرقم القومي للأم": "Enter the mother national ID",
+    "هل تعمل الأم": "Does the mother work?",
+    "حالة الأم": "Mother Status",
+    "متزوجة": "Married",
+    "اسم الوصي": "Guardian Name",
+    "أدخل اسم الوصي": "Enter the guardian name",
+    "الرقم القومي للوصي": "Guardian National ID",
+    "أدخل الرقم القومي للوصي": "Enter the guardian national ID",
+    "سبب الوصاية": "Reason for Guardianship",
+    "أدخل سبب الوصاية": "Enter the reason for guardianship",
+    "(اختياري)": "(Optional)",
+    "عدد أفراد الأسرة": "Number of family members",
+    "أدخل عدد أفراد الأسرة": "Enter the number of family members",
+    "عدد الذكور": "Number of males",
+    "أدخل عدد الذكور": "Enter number of males",
+    "عدد الاناث": "Number of females",
+    "أدخل عدد الاناث": "Enter number of females",
+    "دخل الأسرة": "Family income",
+    "حالة السكن": "Housing condition",
+    "جيد": "Good",
+    "متوسط": "Moderate",
+    "سيء": "Bad",
+    "الابتدائية": "Primary",
+    "الاعدادية": "Middle School",
+    "رقم التليفون": "Phone Number",
+    "أدخل رقم التليفون": "Enter the Phone Number",
+    "البحث الميداني الداخلي": "Internal Field Research",
+    "اكتب رأي المشرف الاجتماعي": "Social Supervisor Opinion",
+    "تاريخ البحث الميداني الداخلي": "Internal Field Research Date",
+    "ملاحظات": "Notes",
+    "اكتب ملاحظات": "Write notes",
+    "أدخل الدخل": "Enter the income",
+    "شهادة وفاة الأب اصل كمبيوتر": "Father death certificate, original computer version",
+    "شهادة وفاة الأم اصل كمبيوتر": "Mother death certificate, original computer version",
+    "صورة من بطاقة الأم أو الوصي": "Copy of the mother or guardian ID card",
+    "ارفق صورة بطاقة الأم أو الوصي": "Attach a copy of the mother or guardian ID card",
+    "ارفق صورة اليتيم": "Attach a photo of the orphan",
+    "صورة اليتيم 4*6 جديدة": "New 4x6 photo of the orphan",
+    "صورة اليتيم كاملة 9*12": "New 9x12 photo of the orphan",
+    "الافادة المدرسية": "School certificate",
+    "أرفق صورة الافادة المدرسية": "Attach the school certificate image",
+    "أرفق البحث الاجتماعى": "Attach the social research",
+    "البحث الاجتماعى": "Social research",
+    "قرار وصاية": "Guardianship Decision",
+    "أرفق قرار وصاية": "Attach the guardianship decision",
+    "العنوان بالكامل":"Full Address",
+    "أدخل العنوان بالكامل":"Enter the full address",
+    "ماهى اليه معرفتكم بجمعية عايش":"How did you get to know about the Aayesh Association",
+    "كيف تعرفتم على جمعية عايش":"How did you get to know about the Aayesh Association?",
+    "أدخل اسم المسجل":"Enter the registrant name",
+    "التسجيل":"Registration",
+    "اسم المستلم":"Recipient Name",
+    "أدخل اسم المستلم":"Enter the recipient name",
+    "المركز":"Center",
+    "أدخل اسم المركز":"Enter the center name",
+    "ارفق صورة شهادة وفاة الأم":"Attach a copy of the mother death certificate",
+    "المحافظة":"Governorate",
+    "أدخل اسم المحافظة":"Enter the name of the governorate",
+    "تاريخ التسجيل":"Date of registration",
+    "عرض كل التفاصيل": "Show all details",
+    "استمارة تقديم الايتام": "Orphan Submission Form",
+    "الصور و الملفات": "Images and Files",
+    "شهادة الميلاد": "Birth certificate",
+    "شهادة وفاة الأب": "Father Death Certificate",
+    "شهادة وفاة الأم": "Mother Death Certificate",
+    "بطاقة الأم": "Mother ID Card",
+    "صورة اليتيم (4×6)": "Orphan Photo (4x6)",
+    "صورة اليتيم (9×12)": "Orphan Photo (9x12)",
+    "إفادة مدرسية": "School Certificate",
+    "سنوات": "Years",
+    "اليه معرفتكم بجمعية عايش": "How did you get to know about the Ayesh Association?",
+    "عرض أقل للتفاصيل": "Show less details",
+    "اسم المسجل": "Registrar Name",
+    "الحالات قيد المراجعة": "Cases Under Review",
+    "لا يوجد أيتام قيد المراجعة": "There are no orphans under review",
+    "مراجع": "Reviewer",
+    "القرار والحالات": "Decision And Cases",
+    "حالة الملف": "File status",
+    "الملف مرفوض":"File Rejected",
+    "قبول أولى للملف":"First Acceptance File",
+    "تقرير المراجع":"Reviewer Report",
+    "سبب الرفض":"Reason for Rejection",
+    "اكتب سبب الرفض":"Write the reason for rejection",
+    "اكتب تقرير المراجع":"Write the reviewers report",
+    "اسم المراجع":"Reviewer Name",
+    "أدخل اسم المراجع":"Enter the reviewer name",
+    "ارسال": "Send",
+    "تحميل الباركود": "Download QR",
+    "الحالات قيد الاعتماد": "Cases Pending Approval",
+    "لا يوجد أيتام قيد الاعتماد": "There are no orphans pending approval",
+    "المعتمد": "Approved",
+    "تقرير المعتمد": "Approved Report",
+    "اكتب تقرير المعتمد": "Write the approved report",
+    "اسم المعتمد": "Approved Name",
+    "حالة": "cases",
+    "الحالات الخاصة": "Special Cases",
+    "تصدير": "Export",
+    "اختر اسم الجمعية": "Select the association name",
+    "الغاء": "Cancel",
+    "عام": "years",
+    "لا يوجد أيتام معتمدين": "There are No orphans are approved",
+    "اكمال المعلومات": "Complete Information",
+    "يوجد معلومات غير مكتملة, قم باكمال المعلومات": "There is incomplete information, please complete the information",
+    "بطاقة الام": "Mother ID card",
+    "بطاقة الأب": "Father ID card",
+    "المتطوع المسؤول": "Responsible Volunteer",
+    "المانح المسؤول": "Responsible Supporter",
+    "أرفق بطاقة الأب": "Attach Father ID Card",
+    "كارت تأمين صحي مدرسي": "School Health Insurance Card",
+    "وصف حالة اليتيم": "Orphan Condition Description",
+    "شهادة التحاق بالمدرسة": "School Enrollment Certificate",
+    "أرفق شهادة التحاق بالمدرسة": "Attach School Enrollment Certificate",
+    "أرفق كارت تأمين صحي مدرسي": "Attach School Health Insurance Card",
+    "تحميل pdf":"Download PDF",
+    "مقدم ل":"Submitted to",
+    "جمعية دار البر":"Dar Al Ber Association",
+    "جمعية الشارقة":"Sharjah Association",
+    "لا يوجد أيتام مقدمين للتسويق":"No orphans have been submitted for marketing",
+    "اكمل البيانات":"Complete Data",
+    "الحالات المدخلة - جمعية دبي الخيرية":"Entered Cases - Dubai Charity Association",
+    "تاريخ ميلاد اليتيم":"Orphan Date of Birth",
+    "الحالة الاجتماعية للأم":"Mother Marital Status",
+    "ولي أمر أو المسؤول المباشر عن اليتيم":"Guardian or Direct Caregiver of the Orphan",
+    "أدخل  المسؤول المباشر عن اليتيم":"Enter the direct guardian of the orphan",
+    "تم تقديمه ل":"Submitted to",
+    "الحالات المدخلة - جمعية دار البر": "Entered Cases - Dar Al Ber Association",
+    "الحالات المدخلة - جمعية المجموعة":"Entered Cases - Al-Majmoua Association",
+    "عدد الأخوة":"Number of Siblings",
+    "حالة اليتيم الصحية":"Orphan Health Status",
+    "الحالات المدخلة - جمعية الشارقة":"Entered Cases - Sharjah Charity Association",
+    "تاريخ وفاة الأم في حال وفاتها":"Date of Mother Death (if deceased)",
+    "الاسم الكامل لليتيم": "Full name of the orphan",
+    "الحالات بانتظار الرد": "Cases Awaiting Response",
+    "تمت كفالته": "Sponsored",
+    "اغلاق": "Close",
+    "لا يوجد أيتام على قائمة الانتظار": "There are no orphans on the waiting list",
+    "قائمة التحولات": "Transfer List",
+    "اضافة للأرشفة": "Add to Archive",
+    "لا يوجد أيتام على قائمة المكفولين": "There are no orphans on the sponsored list",
+    "قائمة التحويلات": "Transfers List",
+    "الرصيد الكلي": "Total Balance",
+    "صورة الايصال": "Receipt Image",
+    "تاريخ التحويل": "Transfer Date",
+    "لا يوجد تحويلات لهذا اليتيم": "No transfers for this orphan",
+    "تنزيل الصورة": "Download Image",
+    "لا يوجد أيتام على القائمة المؤرشفة": "There are no orphans on the archived list",
+    "تقرير الشارقة الخيرية": "Sharjah Charity Report",
+    "تقرير دار البر": "Dar Al Ber Report",
+    "تقرير دبي الخيرية": "Dubai Charity Report",
+    "تقرير السيدة مريم": "Report of Mrs. Mariam",
+    "": "",
+    "": "",
+    "": "",
+    "": "",
+    "": "",
+    "": "",
+    "": "",
+    "": "",
+    "": "",
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
