--- a/lang/en.json
+++ b/lang/en.json
@@ -523,7 +523,11 @@
     "اختر اسم الجمعية": "Select the association name",
     "الغاء": "Cancel",
     "عام": "years",
+    "إرسال": "Send",
+    "تنويه: تم تخصيص الحقلين الإضافيين أدناه لتلبية متطلبات خاصة بـ جمعية دبي الخيرية، ولا يُشترط تعبئتهما من قِبل الجمعيات الأخرى.": "Note: The two fields below are reserved for the specific needs of Dubai Projects Association and are not required to be contacted for others.",
     "لا يوجد أيتام معتمدين": "There are No orphans are approved",
+    "لا يوجد أيتام متاحين": "No orphans available",
+    "اليتيم {$orphan->name} غير مرتبط بأي متبرع": "The orphan {$orphan->name} is not related to any donor.",
     "اكمال المعلومات": "Complete Information",
     "يوجد معلومات غير مكتملة, قم باكمال المعلومات": "There is incomplete information, please complete the information",
     "بطاقة الام": "Mother ID card",
